added new Javascript file

--- a/Post.html
+++ b/Post.html
@@ -87,12 +87,8 @@
     <div id="testBox">Post goes into here as test</div>
 </section>
 
-<script>
-document.getElementById("Login").addEventListener("submit",LoginForm, false);
-document.getElementById("postButton").addEventListener("click",Post, false);
-document.getElementById("postContent").addEventListener("keyup",wordCountPost, false);
-document.getElementById("postTitle").addEventListener("keyup",wordCountPost, false);
-</script>
+<script type="text/javascript" src="Dom2.js"></script>
+
 
 <footer>
     <a href="#Top"> Go back to top</a>
