--- a/anon1.html
+++ b/anon1.html
@@ -83,10 +83,7 @@
 
 
 
-<script>
-
-document.getElementById("Login").addEventListener("submit",LoginForm, false);
-</script>
+<script type="text/javascript" src="Dom2.js"></script>
 <footer>
     <a href="#Top"> Go back to top</a>
 </footer>
