--- a/index.html
+++ b/index.html
@@ -141,10 +141,7 @@
 	    text-decoration:none;font-weight:bold">More Details</a> </div>
 </section>
 
-<script>
-
-document.getElementById("Login").addEventListener("submit",LoginForm, false);
-</script>
+<script type="text/javascript" src="Dom2.js"></script>
 
 <footer>
     <a href="#Top"> Go back to top</a>
