--- a/signup.html
+++ b/signup.html
@@ -86,14 +86,9 @@
     
     </form>
     
-<script>
-
-document.getElementById("Login").addEventListener("submit",LoginForm, false);
-document.getElementById("SignUp").addEventListener("submit",SignUpForm, false);
-</script>
 </section>
 
-
+<script type="text/javascript" src="Dom2.js"></script>
 <footer>
     <a href="#Top"> Go back to top</a>
 </footer>
